examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/assignment_ref_ref_wrong_type.st
language core;
extend with #references, #sequencing;

fn main(n : &&Nat) -> Nat {
	return *n := true; succ(0)
}
//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
